[package]
name = "iceberg-catalog-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iceberg-rs = { git = "https://github.com/jankaul/iceberg-rs", branch = "feat/catalog" }
tokio-postgres = "0.7.7"
async-trait = "0.1.57"
postgres-native-tls = "0.5.0"
serde_json = "1.0.85"
anyhow = "1.0.64"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["rt", "macros"]}